# voice-talk-app

./: .env.example  .gitignore  BUILD_COMPLETE.md  BUILD_COMPLETE_SUMMARY.md  DEVELOPMENT_PROGRESS.md  GITHUB_SETUP.md  GUI_USER_GUIDE.md  QUICKSTART.md  README.md  SECURITY_AUDIT_REPORT.md  START_HERE.md  build_exe.py  cli.py  index.html  main.py  pyproject.toml  requirements.txt  run.py  setup.py
src/: __init__.py
src/accessibility/: __init__.py
src/ai/: quota_manager.py
src/ai/commands/: registry.py
src/ai/conversation/: __init__.py  huggingface_client.py
src/api/: schemas.py
src/api/routes/: audio.py  commands.py  conversation.py  speech.py  voice.py
src/audio/: __init__.py  capture.py  io.py  playback.py  processor.py
src/config/: constants.py  logger.py  settings.py
src/core/: app_instance.py
src/database/: database.py  models.py
src/gui/: main_window.py
src/gui/dialogs/: __init__.py  settings_dialog.py
src/gui/styles/: __init__.py
src/speech/: __init__.py
src/speech/recognition/: __init__.py  vosk_engine.py
src/speech/synthesis/: __init__.py  pyttsx3_engine.py
