[tool.poetry]
name = "voice-talk-app"
version = "0.1.0"
description = "A comprehensive Windows voice and talk mode application with speech recognition, text-to-speech, conversational AI, and voice commands"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Audio Processing
pyaudio = "^0.2.13"
librosa = "^0.10.0"
soundfile = "^0.12.1"
noisereduce = "^2.0.0"
pydub = "^0.25.1"

# Speech Recognition
vosk = "^0.3.45"
sherpa-onnx = "^1.10.0"
onnxruntime = "^1.17.0"

# Text-to-Speech
pyttsx3 = "^2.90"

# Core Framework
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"

# CLI
click = "^8.1.7"
typer = "^0.9.1"
rich = "^13.7.0"

# GUI
PyQt6 = "^6.6.1"

# AI/NLP
transformers = "^4.36.0"
requests = "^2.31.0"

# Utilities
python-dotenv = "^1.0.0"
cryptography = "^41.0.7"
psutil = "^5.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
